# vsCode

Window-main/: c_test.c  cxx_test.cxx
cmake-C/: CMakeLists.txt  inc.h  main.c
cmake-CXX/: CMakeLists.txt  inc.h  main.cxx
linux-main/: c_test.c  cxx_test.cxx
templates/: cmake-C.7z  unifile.7z
templates/cmake-C/: CMakeLists.txt  main.c
templates/cmake-C/lib/: CMakeLists.txt
templates/cmake-C/src/: CMakeLists.txt
templates/unifile/src/: test.c  test.cxx
